Fix layout issues

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@ body {
   margin: 0 auto;
 }
 
+div {
+  padding: 0% 5% 0% 5%
+}
+
 img.index-image {
   width: 580px;
   max-width: 100%;
@@ -26,9 +30,9 @@ img.index-image {
 
 img {
   display: block;
+  width: 900px;
+  max-width: 105%;
   height: auto;
-  width: 850px;
-  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
